TrailORG/src/objects/Agent__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Role_Name__c</fullName>
        <label>Agent Role Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Agent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Not_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Start_Date__c ) , NOT(ISBLANK( End_Date__c ) ))</errorConditionFormula>
        <errorMessage>Please enter Start Date</errorMessage>
    </validationRules>
</CustomObject>